--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-7 col-lg-7 g-0">
+            <div class="col-12 col-md-12 col-lg-7 g-0">
                 <div class="position-relative">
                     <img src="/images/WhatsApp_Image_2023-07-06_at_09.27.06-removebg-preview.png" style="width: 150px;">
                 </div>
@@ -51,9 +51,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-5 col-lg-5 g-0">
-                <div class="position-relative float-l-end float-md-end float-sm-none">
-                    <img src="/images/pexels-cameron-casey-1687093.jpg" style="height: 100vh;align-items: end;width:600px;" class="img-fluid">
+            <div class="col-12 col-md-12 col-lg-5 g-0 ">
+                <div class=" position-relative float-lg-end">
+                    <video class="pb-0 mb-0" style=" width:100%; height:100vh; object-fit:cover;" src="/images/Untitled design.mp4" type="video/mp4" autoplay muted loop></video>
                 </div>
             </div>
         </div>
